--- a/styles-desktop.css
+++ b/styles-desktop.css
@@ -7,11 +7,24 @@ background: radial-gradient(circle, rgba(99,102,241,0.1) 0%, rgba(218,70,239,0.0
 Website: https://cssgradient.io/
 */
 
+/*///////////////////////////////////////////////////////////////////////////
+
+/// Variables
+
+/////////////////////////////////////////////////////////////////////////*/
+
 :root {
-    --fontsize-default: 16px;
-    --fontsize-heading-l: 3.5rem;
-    --fontsize-body-l: 1.125rem;
-    --fontsize-button-s: .875rem; /* 14px */
+    --fontsize-default: 1px;
+
+    --fontsize-heading-xl: 56rem;
+    --fontsize-heading-l: 40rem;
+    --fontsize-heading-m: 32rem;
+    --fontsize-heading-s: 24rem;
+    --fontsize-heading-xs: 20rem;
+
+    --fontsize-body-l: 18rem;
+    --fontsize-body-m: 16rem;
+    --fontsize-body-s: 14rem;
 
     --fontweight-regular: 400;
     --fontweight-semibold: 500;
@@ -28,8 +41,22 @@ Website: https://cssgradient.io/
     --gradient-middle: #8B5CF6;
     --gradient-end: #D946EF;
     
-    --width: 1296px;
+    --width-desktop: 1296rem;
+    --height-xxl: 1304rem;
+    --height-xl: 1176rem;
+    --height-l: 1104rem;
+    --height-m: 1077rem;
+    --height-s: 876rem;
+    --height-xs: 542rem;
+    --height-xxs: 76rem;
 }
+
+
+/*///////////////////////////////////////////////////////////////////////////
+
+/// Reset
+
+/////////////////////////////////////////////////////////////////////////*/
 
 *,
 *::before,
@@ -37,8 +64,15 @@ Website: https://cssgradient.io/
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  border: 0px dashed lightgray; /* REMOVE WHEN DONE */
+  border: 1rem dashed lightgray; /* REMOVE WHEN DONE */
 }
+
+
+/*///////////////////////////////////////////////////////////////////////////
+
+/// Main containers
+
+/////////////////////////////////////////////////////////////////////////*/
 
 html {
     font-family: 'Manrope', sans-serif;
@@ -47,17 +81,49 @@ html {
     font-style: normal;
     font-optical-sizing: auto;
 }
+body {
+    font-size: var(--fontsize-body-m);
+}
 
 header, main, footer {
-    width: var(--width);
+    width: var(--width-desktop);
 }
 
 
-/*//////////////////////////////
+/*///////////////////////////////////////////////////////////////////////////
 
-/// Headline styles
+/// Section heights
 
-////////////////////////////*/
+/////////////////////////////////////////////////////////////////////////*/
+
+.height-xxl {
+    height: var(--height-xxl);
+}
+.height-xl {
+    height: var(--height-xl);
+}
+.height-l {
+    height: var(--height-l);
+}
+.height-m {
+    height: var(--height-m);
+}
+.height-s {
+    height: var(--height-s);
+}
+.height-xs {
+    height: var(--height-xs);
+}
+.height-xxs {
+    height: var(--height-xxs);
+}
+
+
+/*///////////////////////////////////////////////////////////////////////////
+
+/// Headlines
+
+/////////////////////////////////////////////////////////////////////////*/
 
 h1, 
 h2, 
@@ -69,26 +135,30 @@ h1 {
 }
 
 
-/*//////////////////////////////
+/*///////////////////////////////////////////////////////////////////////////
 
 /// Anchors
 
-////////////////////////////*/
+/////////////////////////////////////////////////////////////////////////*/
 
-a, 
+a,
 a:visited {
     text-decoration: none;
 }
 a:hover {
     text-decoration: underline;
 }
+nav a, 
+nav a:visited {
+    color: black;
+}
 
 
-/*//////////////////////////////
+/*///////////////////////////////////////////////////////////////////////////
 
-/// Wrapper and Container
+/// Wrappers and Containers
 
-////////////////////////////*/
+/////////////////////////////////////////////////////////////////////////*/
 
 .wrapper {
     display: grid;
@@ -106,61 +176,84 @@ a:hover {
 }
 
 
-/*//////////////////////////////
+/*///////////////////////////////////////////////////////////////////////////
 
 /// Buttons
 
-////////////////////////////*/
+/////////////////////////////////////////////////////////////////////////*/
 
 .button {
     background-color: var(--color-primary);
     color: var(--color-white);
-    font-size: var(--fontsize-button-s);
+    font-size: var(--fontsize-body-s);
     font-weight: var(--fontweight-semibold);
     align-content: center;
     
 }
 .button__signin {
-    width: 140px;
-    height: 36px;
+    width: 140rem;
+    height: 36rem;
     background-image: url('assets/avatar.svg');
     background-repeat: no-repeat;
-    background-position-x: 20px;
+    background-position-x: 20rem;
     background-position-y: center;
     text-align: right;
-    border-radius: 4px;
-    padding-right: 20px;
+    border-radius: 4rem;
+    padding-right: 20rem;
 }
 .button__learn-more {
-    width: 156px;
-    height: 44px;
+    width: 156rem;
+    height: 44rem;
     display: block;
     background-image: url('assets/arrow-right-white.svg');
     background-repeat: no-repeat;
-    background-position-x: 116px;
-    background-position-y: 17px;
+    background-position-x: 116rem;
+    background-position-y: 17rem;
     text-align: right;
-    border-radius: 6px;
-    padding-right: 56px;
+    border-radius: 6rem;
+    padding-right: 56rem;
 }
+
+
+/*///////////////////////////////////////////////////////////////////////////
+
+/// Backgrounds
+
+/////////////////////////////////////////////////////////////////////////*/
 
 .bg__dark {
     background-color: var(--color-gray-100);
 }
 
 
-/*//////////////////////////////
+/*///////////////////////////////////////////////////////////////////////////
 
-/// Clients logotypes in the App Features section
+/// Images and Logotypes
 
-////////////////////////////*/
+/////////////////////////////////////////////////////////////////////////*/
 
 .client__logo img {
-    width: 196px;
-    height: 100px;
-    border: 1px solid var(--color-gray-100);
-    border-radius: 8px;
+    width: 196rem;
+    height: 100rem;
+    border: 1rem solid var(--color-gray-100);
+    border-radius: 8rem;
 }
 .client__logo img:hover {
-    box-shadow: 1px 1px 10px var(--color-gray-100);
+    box-shadow: 1rem 1rem 10rem var(--color-gray-100);
+}
+
+/*///////////////////////////////////////////////////////////////////////////
+
+/// Elements positioning in <header>
+
+/////////////////////////////////////////////////////////////////////////*/
+
+div #logo {
+    padding-right: 48rem;
+}
+div #toggle {
+    padding-right: 32rem;
+}
+#toggle span {
+    padding-right: 17rem;
 }
