--- a/styles-desktop.css
+++ b/styles-desktop.css
@@ -130,9 +130,11 @@ h3 {
     font-weight: var(--fontweight-extrabold);
 }
 h1 {
+    font-size: var(--fontsize-heading-xl);
+}
+h2 {
     font-size: var(--fontsize-heading-l);
 }
-
 /*-----------------------------------------------------------------------
 /// Anchors
 -----------------------------------------------------------------------*/
@@ -301,4 +303,77 @@ div #toggle {
 }
 .features__standards {
     background-image: url('assets/icon-smiley.svg');
+}
+
+/*-----------------------------------------------------------------------
+/// Styles for keynotes under Make your money... and Receive payment...
+-----------------------------------------------------------------------*/
+
+.container__make_your_money {
+    width: 1076rem;
+    height: 500rem;
+    padding-right: 665rem;
+    background-image: url('assets/graphic-1.webp');
+    background-repeat: no-repeat;
+    background-position-x:right;
+    background-position-y:center;
+}
+.container__make_your_money h2 {
+    font-size: var(--fontsize-heading-m);
+    line-height: 130%;
+    margin-top: 97rem;
+    margin-bottom: 44rem;
+}
+.container__make_your_money ul {
+    list-style-position: inside;
+    list-style-type: none;
+}
+.container__make_your_money li {
+    background-image: url('assets/check-circle.svg');
+    background-repeat: no-repeat;
+    background-position-x:left;
+    background-position-y:center;
+    text-indent: 28rem;
+    margin-bottom: 20rem;
+}
+.container__make_your_money a {
+    margin-top: 23rem;
+}
+
+.container__receive_payment {
+    width: 1076rem;
+    height: 500rem;
+    padding-left: 550rem;
+    background-image: url('assets/graphic-2.webp');
+    background-repeat: no-repeat;
+    background-position-x:left;
+    background-position-y:center;
+}
+.container__receive_payment h2 {
+    font-size: var(--fontsize-heading-m);
+    line-height: 130%;
+    margin-top: 74rem;
+    margin-bottom: 49rem;
+}
+.container__receive_payment div {
+    display: flex;
+    justify-content: space-between;
+}
+.container__receive_payment p {
+    display: inline-block;
+    background-repeat: no-repeat;
+    background-position-x:left;
+    background-position-y:top;
+    width: 243rem;
+    line-height: 160%;
+    padding-top: 83rem;
+}
+.container__receive_payment p:first-of-type {
+    background-image: url('assets/icon-card.svg');
+}
+.container__receive_payment p:last-of-type {
+    background-image: url('assets/icon-wallet.svg');
+}
+.container__receive_payment a {
+    margin-top: 47rem;
 }
