Cleaned upp the styles and separated them into different CSS files

--- a/css/styles-toggle-switch.css
+++ b/css/styles-toggle-switch.css
@@ -1,8 +1,6 @@
 /*
-
-Source: https://codepen.io/mburnette/pen/LxNxNg
-Author: Marcus Burnette
-
+Original code created by Marcus Burnette
+https://codepen.io/mburnette/pen/LxNxNg
 */
 
 @import url('styles-desktop.css');
