Updated CSS for Header, Section 1 and Section 3

--- a/css/section-02.css
+++ b/css/section-02.css
@@ -1,5 +1,5 @@
 /*-----------------------------------------------------------------------
-/// Styles for the logotypes of the clients
+/// Clients logos
 -----------------------------------------------------------------------*/
 
 .client__logo img {
@@ -13,7 +13,7 @@
 }
 
 /*-----------------------------------------------------------------------
-/// Styles for keynotes
+/// App Features keynotes
 -----------------------------------------------------------------------*/
 
 .features {
