--- a/css/section-04.css
+++ b/css/section-04.css
@@ -1,5 +1,5 @@
 /*-----------------------------------------------------------------------
-/// Styles for keynotes under Make your money... and Receive payment...
+/// Styles for Make your money...
 -----------------------------------------------------------------------*/
 
 .container__make_your_money {
@@ -32,6 +32,10 @@
 .container__make_your_money a {
   margin-top: 23rem;
 }
+
+/*-----------------------------------------------------------------------
+/// Styles for Receive payment...
+-----------------------------------------------------------------------*/
 
 .container__receive_payment {
   width: 1076rem;
@@ -69,4 +73,21 @@
 }
 .container__receive_payment a {
   margin-top: 47rem;
+}
+
+/*-----------------------------------------------------------------------
+/// Styles for the Learn More button
+-----------------------------------------------------------------------*/
+
+.button__learn_more {
+  display: block;
+  width: 156rem;
+  height: 44rem;
+  background-image: url('../assets/arrow-right-white.svg');
+  background-repeat: no-repeat;
+  background-position-x: 116rem;
+  background-position-y: 17rem;
+  text-align: right;
+  border-radius: 6rem;
+  padding-right: 56rem;
 }
