--- a/css/desktop.css
+++ b/css/desktop.css
@@ -31,6 +31,7 @@
     --color-primary: #6366F1;
 
     --color-gray-900: #0B0F19;
+    --color-gray-800: #33354D;
     --color-gray-700: #565973;
     --color-gray-600: #9397AD;
     --color-gray-100: #F3F6FF;
@@ -107,7 +108,7 @@ a:hover {
 }
 nav a, 
 nav a:visited {
-    color: black;
+    color: var(--color-gray-800);
 }
 
 /*-----------------------------------------------------------------------
