--- a/css/section-02.css
+++ b/css/section-02.css
@@ -1,16 +1,63 @@
-/*-----------------------------------------------------------------------
-/// Clients logos
------------------------------------------------------------------------*/
+#section-02 {
+  display: grid;
+  grid-template-columns: auto var(--width-desktop) auto;
+}
+#s02-a {
+  grid-column-start: 2;
+  grid-column-end: 3;
+}
 
-.client__logo img {
+#s02-b {
+  padding-left: calc(var(--width-desktop) - 746rem);
+  background-image: url('../assets/image.webp');
+  background-repeat: no-repeat;
+  background-position-x: left;
+  background-position-y: top;
+}
+
+/*-----------------------------------------------------------------------
+/// Clients logotypes
+-----------------------------------------------------------------------*/
+.clients {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 96rem;
+  margin-bottom: 113rem;
+}
+.clients img {
   width: 196rem;
   height: 100rem;
   border: 1rem solid var(--color-gray-100);
   border-radius: 8rem;
 }
-.client__logo img:hover {
+.clients img:hover {
   box-shadow: 1rem 1rem 10rem var(--color-gray-100);
 }
+
+/*-----------------------------------------------------------------------
+/// Headline and body
+-----------------------------------------------------------------------*/
+
+#s02-b h2 {
+  margin-bottom: 13rem;
+}
+
+#s02-b > p:first-of-type {
+  margin-bottom: 67rem;
+}
+
+
+/*-----------------------------------------------------------------------
+/// App Features layout
+-----------------------------------------------------------------------*/
+
+#s02-features {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  row-gap: 48rem;
+  margin-bottom: 156rem;
+}
+
 
 /*-----------------------------------------------------------------------
 /// App Features keynotes
@@ -19,8 +66,8 @@
 .features {
   width: 345rem;
   background-repeat: no-repeat;
-  background-position-x:left;
-  background-position-y:top;
+  background-position-x: left;
+  background-position-y: top;
   padding-left: 84rem;
 }
 .features h3 {
