Updated CSS for Section 04 and clients logotypes in Section 02

--- a/css/section-02.css
+++ b/css/section-02.css
@@ -26,9 +26,7 @@
   margin-top: 96rem;
   margin-bottom: 113rem;
 }
-.clients img {
-  width: 196rem;
-  height: 100rem;
+.clients > img {
   border: 1rem solid var(--color-gray-100);
   border-radius: 8rem;
 }
