--- a/css/global.css
+++ b/css/global.css
@@ -4,6 +4,7 @@
 @import url('../css/section-02.css');
 @import url('../css/section-03.css');
 @import url('../css/section-04.css');
+@import url('../css/section-05.css');
 
 :root {
     --fontsize-default: 1px;
@@ -20,6 +21,7 @@
 
     --fontweight-regular: 400;
     --fontweight-semibold: 500;
+    --fontweight-bold: 600;
     --fontweight-extrabold: 800;
 
     --color-black: #000;
@@ -65,7 +67,7 @@
 -----------------------------------------------------------------------*/
 
 *{
-    border: .5rem dashed lightgray; /* REMOVE WHEN DONE */
+    border: 0rem dashed lightgray; /* REMOVE WHEN DONE */
 }
 
 html {
