Added styles to Section 06

--- a/css/global.css
+++ b/css/global.css
@@ -5,6 +5,7 @@
 @import url('../css/section-03.css');
 @import url('../css/section-04.css');
 @import url('../css/section-05.css');
+@import url('../css/section-06.css');
 
 :root {
     --fontsize-default: 1px;
