Completed styling for Section 06

--- a/css/global.css
+++ b/css/global.css
@@ -37,6 +37,7 @@
     --color-gray-800: #33354D;
     --color-gray-700: #565973;
     --color-gray-600: #9397AD;
+    --color-gray-300: #E2E5F1;
     --color-gray-100: #F3F6FF;
 
     --gradient-start: #6366F1;
