--- a/css/section-03.css
+++ b/css/section-03.css
@@ -1,5 +1,5 @@
 #section-03 {
-  background-image: url('../assets/carousel.webp');
+  background-image: url('../assets/carousel-hq.webp');
   background-repeat: no-repeat;
   background-position-x: center;
   background-position-y: 180rem;
@@ -13,6 +13,10 @@
   text-align: center;
 }
 
-#section-03 div h2 {
+#section-03 h2 {
   padding-top: 80rem;
+}
+
+#section-03 h3 {
+  font-size: var(--fontsize-heading-s);
 }
